--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<h1 class="center"><img src="investment-calculator-logo.png" /></h1>
+<app-header />
+<app-user-input (calculate)="onCalculateInvestmentResults($event)" />
+<app-investment-results [results]="resultsData" />
